--- a/index.html
+++ b/index.html
@@ -929,7 +929,8 @@
    <div class="story-container fade-in">
     <div class="walking-elephant">👨‍💼👩‍💼📓💼</div>
     <div class="flying-butterfly">🕊️</div>
-    <h1 class="lesson-title">Hotel Reception Conversation</h1>
+     <h1 class="lesson-title">ដំណើរការសាកល្បង Version 1</h1>
+		 <h2 class="lesson-title">Hotel Reception Conversation</h2>
     <p class="story-text" id="lesson-paragraph">
         <strong>Receptionist:</strong> Good evening! Welcome to Sunrise Grand Hotel. How may I assist you tonight?<br><br>
         <strong>Guest:</strong> Hi, I have a reservation under the name Emily Torres. I'm here for the Global Marketing Conference.<br><br>
